feat: created the button logic and new styles

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="./styles/globalStyle.css">
     <link rel="stylesheet" href="./styles/style.css">
     
-    <title>To do List | JA</title>
+    <title>To do List</title>
 </head>
 <body>
+    <header>
+        <h1>Lista de tarefas</h1>
+    </header>
 
-    <h1>To do List | JA</h1>
-
-    <div class="container">
+    <form class="container">
         <div class="input-and-button">
             <input type="text" class="input" placeholder="Digite sua nova tarefa">
-            <button class="button">+</button>
+            <button class="button" disabled>+</button>
         </div>
         <div class="to-do-list"></div>
-    </div>
+    </form>
     
     <script src="./src/index.js"></script>
 </body>
